<resources>
    <string name="app_name">LoginApp4</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Sign-In</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Your Data</string>
    <string name="username">Email: </string>
    <string name="tPassword3">Password: </string>
    <string name="txemail">Email Result</string>
    <string name="txpassword">Password Result</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Registrasi</string>
    <string name="mlogout">Logout</string>
    <string name="ldaftar">Registrasi Akun</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama Kontak</string>
    <string name="notel">Nomor Telepon</string>
    <string name="loginpng">loginpng</string>

</resources>